added ssl certificates to ansible setup

--- a/ansible/roles/certbot/tasks/main.yml
+++ b/ansible/roles/certbot/tasks/main.yml
@@ -23,3 +23,6 @@
   apt:
     name: python-certbot-nginx
     state: latest
+
+- name: get certificates
+  shell: certbot --nginx -n -m {{email}} --agree-tos --redirect --domains {{domains}}
