updated for new domain

--- a/ansible/roles/nginx/files/jenkins.morganj.co.uk.conf
+++ b/ansible/roles/nginx/files/jenkins.morganj.co.uk.conf
@@ -1,7 +1,7 @@
 # Deployed via Ansible
 
 server {
-  server_name jenkins.jakemorgan.io;
+  server_name jenkins.morganj.co.uk;
 
   location / {
     proxy_pass http://127.0.0.1:8080;
