--- a/ansible/roles/certbot/vars/main.yml
+++ b/ansible/roles/certbot/vars/main.yml
@@ -1,4 +1,4 @@
 ---
 # vars file for certbot
-domains: jenkins.jakemorgan.io
+domains: jenkins.morganj.co.uk
 email: "{{ lookup('file', '~/.ssh/personal-email') }}"
