--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -12,5 +12,5 @@
     dest: /etc/nginx/sites-enabled/jenkins.morganj.co.uk.conf
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
   notify: restart nginx
